fix: chart spacing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -152,10 +152,11 @@ header {
 footer {
     display: grid;
     grid-template-columns: auto auto auto;
+    justify-content: space-evenly;
     gap: 0.5rem;
     border: 1px solid #aaa;
     background-color: white;
-    height: 100%;
+    /* height: 100%; */
     max-height: 40vh;
     grid-row-start: 4;
     grid-row-end: 5;
